--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 *.pyc
+
+# Security Rules Added by GitGuardian Remediation
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+*.env
+secrets.json
+credentials.json
+*.pem
+*.key
+*.p12
+*.pfx
+*.crt
+*.csr
+*.bak
+*.backup
